@@ -8,6 +8,7 @@ NUE - Network Utterance Environment
 ・権限システム実装。データ仕様通り。
 
 ■BUGS
+CUserがUPDATEを想定していない
 
 ======================================================================
 ■2011/5/31 - Version 0.0.27
